--- a/src/main/webapp/WEB-INF/html/index.html
+++ b/src/main/webapp/WEB-INF/html/index.html
@@ -1,20 +1,28 @@
 <!doctype html>
-<html lang="en" ng-app="AngularSpringApp">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <title>Service App</title>
     <link rel="stylesheet" href="resources/css/app.css"/>
-    <link rel="stylesheet" href="resources/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="resources/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body>
 <div id="wrapper">
-    <ul class="menu">
-        <li><a href="#/cars">Cars</a></li>
-        <li><a href="#/trains">Trains</a></li>
-        <li><a href="#/railwaystations">Railway Station</a></li>
-    </ul>
-    <hr class="" />
-    <div ng-view=""></div>
+    <hr class=""/>
+    <div>
+        <h1>This application is built by automating the following things using Docker engine</h1>
+
+        <h3>
+            <ul>
+                <li>JDK</li>
+                <li>Git</li>
+                <li>Maven</li>
+                <li>Tomcat</li>
+                <li>MySql</li>
+                <li>Spring App</li>
+            </ul>
+        </h3>
+    </div>
 </div>
 
 <script src="resources/js/lib/angular/angular.js"></script>
