--- a/src/main/webapp/WEB-INF/html/index.html
+++ b/src/main/webapp/WEB-INF/html/index.html
@@ -22,6 +22,11 @@
                 <li>Spring App</li>
             </ul>
         </h3>
+        <h3>
+            <ul>
+                <li>Demonstrating the Docker power</li>
+            </ul>
+        </h3>
     </div>
 </div>
 
